cabal-version:       2.4

name:                edit-log-core
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Isaac Elliott
maintainer:          isaace71295@gmail.com
-- copyright:
category:            Language
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     
                       Diff
                     , Diff.SequenceDiff
                     , Hash
                     , Log
                     , Log.Pure
                     , Node
                     , NodeType
                     , Path
                     , Session
                     , Session.Pure
                     , Store
                     , Store.Pure
                     , Store.Pure.Internal
                     , Syntax
                     , Versioned
                     , Versioned.Pure
  build-depends:       base ^>=4.12.0.0
                     , containers
                     , dependent-sum-template
                     , hashable
                     , lens
                     , mtl
                     , some
                     , transformers >= 0.5
                     , unordered-containers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

executable edit-log
  main-is:             Main.hs
  build-depends:       base ^>=4.12.0.0
                     , edit-log-core
  hs-source-dirs:      app
  default-language:    Haskell2010

test-suite edit-log-core-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:
                       Gen.Hash
                       Gen.Ident
                     , Gen.Node
                     , Gen.NodeType
                     , Gen.Syntax
                     , Test.Diff.SequenceDiff
                     , Test.Hash
                     , Test.NodeType
                     , Test.Store.Pure
  main-is:             Main.hs
  build-depends:       base ^>=4.12.0.0
                     , edit-log-core
                     , hspec
                     , hspec-hedgehog
                     , hedgehog
                     , some
  ghc-options:         -Wall -Werror
