cabal-version:       2.4

name:                edit-log-core
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Isaac Elliott
maintainer:          isaace71295@gmail.com
-- copyright:
category:            Language
extra-source-files:  CHANGELOG.md

library
  exposed-modules:
                       Check
                     , Diff
                     , Diff.SequenceDiff
                     , Hash
                     , Log
                     , Log.Pure
                     , Node
                     , NodeType
                     , Parser
                     , Path
                     , Path.Trie
                     , Path.Trie.Internal
                     , Session
                     , Session.Pure
                     , Store
                     , Store.Pure
                     , Store.Pure.Internal
                     , Syntax
                     , Versioned
                     , Versioned.Pure
  build-depends:       base ^>=4.12.0.0
                     , bifunctors
                     , constraints-extras
                     , containers
                     , dependent-map
                     , dependent-sum
                     , dependent-sum-template
                     , hashable
                     , lens
                     , mtl
                     , parsers
                     , transformers >= 0.5
                     , unordered-containers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

executable edit-log
  main-is:             Main.hs
  build-depends:       base ^>=4.12.0.0
                     , edit-log-core
  hs-source-dirs:      app
  default-language:    Haskell2010

test-suite edit-log-core-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:
                       Gen.Hash
                       Gen.Ident
                     , Gen.Node
                     , Gen.NodeType
                     , Gen.Path
                     , Gen.Path.Trie
                     , Gen.Syntax
                     , Test.Diff.SequenceDiff
                     , Test.Hash
                     , Test.NodeType
                     , Test.Path.Trie
                     , Test.Store.Pure
  main-is:             Main.hs
  build-depends:       base ^>=4.12.0.0
                     , edit-log-core
                     , bifunctors
                     , dependent-map
                     , dependent-sum
                     , hspec
                     , hspec-hedgehog
                     , hedgehog
  ghc-options:         -Wall -Werror
