cabal-version:       2.4

name:                edit-log-editor
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Isaac Elliott
maintainer:          isaace71295@gmail.com
category:            Web
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Attrs
                     , Autocomplete
                     , BottomPanel
                     , ContextMenu
                     , Focus
                     , Navigation
                     , Render
                     , Svg
                     , Main
  build-depends:       base ^>=4.12.0.0
                     , edit-log-core
                     , bifunctors
                     , containers
                     , dependent-map
                     , dependent-sum
                     , dependent-sum-template
                     , ghcjs-dom
                     , jsaddle
                     , lens
                     , mtl
                     , reflex
                     , reflex-dom
                     , text
                     , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

executable editor
  main-is:             Main.hs
  build-depends:       base ^>=4.12.0.0
                     , edit-log-editor
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

test-suite editor-tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base ^>=4.12.0.0
                     , edit-log-editor
                     , hedgehog
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror