cabal-version:       2.4

name:                edit-log-renderdiff
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Isaac Elliott
maintainer:          isaace71295@gmail.com
-- copyright:
category:            Language
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Render
  build-depends:       base ^>=4.12.0.0
                     , edit-log-core
                     , blaze-html
                     , witherable
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

executable renderdiff
  main-is:             Main.hs
  build-depends:       base ^>=4.12.0.0
                     , edit-log-core
                     , edit-log-renderdiff
                     , bytestring >= 0.10
                     , blaze-html
  hs-source-dirs:      app
  default-language:    Haskell2010